--- a/portfolio.html
+++ b/portfolio.html
@@ -63,13 +63,12 @@
                         <a href="" class="grid-link">
                             <div class="thumb-img">
                                 <img class="grid-img" src="./images/img1.jpg" alt="Технокряк" width="370" height="294">
-                            </div>
-                            <div class="grid-descr">
-                                <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                                <div class="grid-descr">
+                                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
                                         отримати вичерпні відомості про компанію чи приватну особу.
-                                </p>
+                                    </p>
+                                </div>
                             </div>
-                            
                             <div class="project-item">
                                 <h3 class="project-title">Технокряк</h3>
                                 <p class="project-descr">Веб-сайт</p>
@@ -78,7 +77,14 @@
                     </li>
                     <li class="grid-item">
                         <a href="" class="grid-link">
-                            <img class="grid-img" src="./images/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                            <div class="thumb-img">
+                                <img class="grid-img" src="./images/img2.jpg" alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                                <div class="grid-descr">
+                                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-item">
                                 <h3 lang="en" class="project-title">Постер New Orlean vs Golden Star</h3>
                                 <p class="project-descr">Дизайн</p>
@@ -87,7 +93,14 @@
                     </li>
                     <li class="grid-item">
                         <a href="" class="grid-link">
-                            <img class="grid-img" src="./images/img3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                            <div class="thumb-img">
+                                <img class="grid-img" src="./images/img3.jpg" alt="Ресторан Seafood" width="370" height="294">
+                                    <div class="grid-descr">
+                                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-item">
                                 <h3 lang="en" class="project-title">Ресторан Seafood</h3>
                                 <p class="project-descr">Додаток</p>
@@ -96,7 +109,14 @@
                     </li>
                     <li class="grid-item">
                         <a href="" class="grid-link">
-                            <img class="grid-img" src="./images/img4.jpg" alt="Проєкт Prime" width="370" height="294">
+                            <div class="thumb-img">
+                                <img class="grid-img" src="./images/img4.jpg" alt="Проєкт Prime" width="370" height="294">
+                                <div class="grid-descr">
+                                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-item">
                                 <h3 lang="en" class="project-title">Проєкт Prime</h3>
                                 <p class="project-descr">Маркетинг</p>
@@ -105,7 +125,14 @@
                     </li>
                     <li class="grid-item">
                         <a href="" class="grid-link">
-                            <img class="grid-img" src="./images/img5.jpg" alt="Проєкт Boxes" width="370" height="294">
+                            <div class="thumb-img">
+                                <img class="grid-img" src="./images/img5.jpg" alt="Проєкт Boxes" width="370" height="294">
+                                <div class="grid-descr">
+                                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-item">
                                 <h3 lang="en" class="project-title">Проєкт Boxes</h3>
                                 <p class="project-descr">Додаток</p>
@@ -114,7 +141,14 @@
                     </li>
                     <li class="grid-item">
                         <a href="" class="grid-link">
-                            <img class="grid-img" src="./images/img6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                            <div class="thumb-img">
+                                <img class="grid-img" src="./images/img6.jpg" alt="Inspiration has no Borders" width="370" height="294">
+                                <div class="grid-descr">
+                                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-item">
                                 <h3 lang="en" class="project-title">Inspiration has no Borders</h3>
                                 <p class="project-descr">Веб-сайт</p>
@@ -123,7 +157,14 @@
                     </li>
                     <li class="grid-item">
                         <a href="" class="grid-link">
-                            <img class="grid-img" src="./images/img7.jpg" alt="Видання Limited Edition" width="370" height="294">
+                            <div class="thumb-img">
+                                <img class="grid-img" src="./images/img7.jpg" alt="Видання Limited Edition" width="370" height="294">
+                                <div class="grid-descr">
+                                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-item">
                                 <h3 lang="en" class="project-title">Видання Limited Edition</h3>
                                 <p class="project-descr">Дизайн</p>
@@ -132,7 +173,14 @@
                     </li>
                      <li class="grid-item">
                         <a href="" class="grid-link">
-                            <img class="grid-img" src="./images/img8.jpg" alt="Проєкт LAB" width="370" height="294">
+                            <div class="thumb-img">
+                                <img class="grid-img" src="./images/img8.jpg" alt="Проєкт LAB" width="370" height="294">
+                                <div class="grid-descr">
+                                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-item">
                                 <h3 lang="en" class="project-title">Проєкт LAB</h3>
                                 <p class="project-descr">Маркетинг</p>
@@ -141,7 +189,14 @@
                     </li>
                     <li class="grid-item">
                         <a href="" class="grid-link">
-                            <img class="grid-img" src="./images/img9.jpg" alt="Growing Business" width="370" height="294">
+                            <div class="thumb-img">
+                                <img class="grid-img" src="./images/img9.jpg" alt="Growing Business" width="370" height="294">
+                                <div class="grid-descr">
+                                    <p>Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все це дозволить відвідувачу
+                                        отримати вичерпні відомості про компанію чи приватну особу.
+                                    </p>
+                                </div>
+                            </div>
                             <div class="project-item">
                                 <h3 lang="en" class="project-title">Growing Business</h3>
                                 <p class="project-descr">Додаток</p>
